k8s/servarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun-servarr
  namespace: homelab
spec:
  selector:
    app: gluetun-servarr
  ports:
  - name: qbittorrent
    port: 9095
    targetPort: 9095
    protocol: TCP
  - name: qbit-tcp
    port: 6881
    targetPort: 6881
    protocol: TCP
  - name: qbit-udp
    port: 6881
    targetPort: 6881
    protocol: UDP
  - name: qbit-conn-tcp
    port: 55426
    targetPort: 55426
    protocol: TCP
  - name: qbit-conn-udp
    port: 55426
    targetPort: 55426
    protocol: UDP
  - name: qbit-alt-tcp
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: qbit-alt-udp
    port: 9000
    targetPort: 9000
    protocol: UDP
  - name: radarr
    port: 7878
    targetPort: 7878
    protocol: TCP
  - name: prowlarr
    port: 9696
    targetPort: 9696
    protocol: TCP
  - name: flaresolverr
    port: 8191
    targetPort: 8191
    protocol: TCP
  - name: sonarr
    port: 8989
    targetPort: 8989
    protocol: TCP
  - name: bazarr
    port: 6767
    targetPort: 6767
    protocol: TCP
  type: ClusterIP
