k8s/servarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: qbittorrent.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun-servarr
            port:
              number: 9095
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: sonarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun-servarr
            port:
              number: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: radarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun-servarr
            port:
              number: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: prowlarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun-servarr
            port:
              number: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: bazarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun-servarr
            port:
              number: 6767
